--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,7 @@
         }
     ],
     "require": {
-        "php": "^7.1",
+        "php": "^7.1|^8.0",
         "laravel/framework": "^5.8 || ^6.0",
         "laravel/nova": "^2.0"
     },
