--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,7 @@
     ],
     "require": {
         "php": "^7.1|^8.0",
-        "laravel/framework": "^5.8 || ^6.0",
+        "laravel/framework": "^5.8 || ^6.0 || ^7.0 || ^8.0",
         "laravel/nova": "^2.0"
     },
     "require-dev": {
